--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,11 +1,34 @@
 steps:
+  # 🔍 Step 1: Check if Cloud Function exists, if not deploy it
+  - name: 'gcr.io/cloud-builders/gcloud'
+    id: 'check-function'
+    entrypoint: 'bash'
+    args:
+      - '-c'
+      - |
+        if ! gcloud functions describe deployAppFunction --region=asia-south1 --gen2; then
+          gcloud functions deploy deployAppFunction \
+            --gen2 \
+            --runtime=python311 \
+            --region=asia-south1 \
+            --entry-point=deploy_app_logic \
+            --source=cloud-function \
+            --trigger-topic=deploy-topic \
+            --trigger-location=asia-south1 \
+            --timeout=60s
+        else
+          echo "✅ Cloud Function already exists. Skipping deploy."
+  
+  # 🐳 Step 2: Build Docker image for your app
   - name: 'gcr.io/cloud-builders/docker'
     dir: 'app'
     args: ['build', '-t', 'gcr.io/$PROJECT_ID/my-app:$SHORT_SHA', '.']
 
+  # 📦 Step 3: Push image to Artifact Registry (or Container Registry)
   - name: 'gcr.io/cloud-builders/docker'
     args: ['push', 'gcr.io/$PROJECT_ID/my-app:$SHORT_SHA']
 
+  # 📤 Step 4: Publish message to Pub/Sub (triggers Cloud Function)
   - name: 'gcr.io/cloud-builders/gcloud'
     args:
       - pubsub
