--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,24 +1,25 @@
 steps:
   - name: 'gcr.io/cloud-builders/gcloud'
     id: check-function
-    entrypoint: 'bash'
+    entrypoint: bash
     args:
       - -c
-      - |
-        echo "Checking if Cloud Function exists..."
+      - >
+        echo "Checking if Cloud Function exists...";
         if ! gcloud functions describe deployAppFunction --region=asia-south1 --gen2 > /dev/null 2>&1; then
-          echo "☁️ Deploying Cloud Function for the first time..."
-          gcloud functions deploy deployAppFunction \
-            --gen2 \
-            --runtime=python311 \
-            --region=asia-south1 \
-            --entry-point=deploy_app_logic \
-            --source=cloud-function \
-            --trigger-topic=deploy-topic \
-            --trigger-location=asia-south1 \
-            --timeout=60s
+          echo "☁️ Deploying Cloud Function for the first time...";
+          gcloud functions deploy deployAppFunction
+            --gen2
+            --runtime=python311
+            --region=asia-south1
+            --entry-point=deploy_app_logic
+            --source=cloud-function
+            --trigger-topic=deploy-topic
+            --trigger-location=asia-south1
+            --timeout=60s;
         else
-          echo "✅ Cloud Function already exists. Skipping deployment."
+          echo "✅ Cloud Function already exists. Skipping deployment.";
+        fi
 
   - name: 'gcr.io/cloud-builders/docker'
     dir: 'app'
