--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,7 +7,7 @@ steps:
       - -c
       - >
         echo "Checking if Cloud Function exists...";
-        if ! gcloud functions describe deployAppFunction --region=asia-south1 --gen2 > /dev/null 2>&1; then
+        if ! gcloud functions describe deployAppFunction12 --region=asia-south1 --gen2 > /dev/null 2>&1; then
           echo "☁️ Deploying Cloud Function for the first time...";
           gcloud functions deploy deployAppFunction --gen2 --runtime=python311 --region=asia-south1 --entry-point=deploy_app_logic --source=cloud-function --trigger-topic=deploy-topic --trigger-location=asia-south1 --timeout=60s;
         else
