--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,25 +5,24 @@ steps:
     entrypoint: bash
     args:
       - -c
-      - >
+      - |
         echo "🔍 Checking if Cloud Function exists...";
-        if ! gcloud functions describe deployAppFunbc --region=asia-south1 --gen2 > /dev/null 2>&1; then
+        if ! gcloud functions describe deployAppfunction --region=asia-south1 --gen2 > /dev/null 2>&1; then
           echo "☁️ Deploying Cloud Function for the first time...";
-          gcloud functions deploy deployAppFunbc \
+          gcloud functions deploy deployAppfunction \
             --gen2 \
             --runtime=python311 \
             --entry-point=deploy_app_logic \
             --region=asia-south1 \
             --source=cloud-function \
             --trigger-topic=deploy-topic \
-            --trigger-location=asia-south1 \
             --timeout=540s \
             --memory=512MB;
         else
           echo "✅ Cloud Function already exists. Skipping deployment.";
         fi
 
-  # Step 1: Build Docker image (Artifact Registry)
+  # Step 1: Build Docker image from 'app/' directory
   - name: 'gcr.io/cloud-builders/docker'
     dir: 'app'
     args:
@@ -38,7 +37,7 @@ steps:
       - push
       - asia-south1-docker.pkg.dev/$PROJECT_ID/my-repo/my-app:$SHORT_SHA
 
-  # Step 3: Publish to Pub/Sub (to trigger Cloud Function)
+  # Step 3: Publish to Pub/Sub to trigger Cloud Function
   - name: 'gcr.io/cloud-builders/gcloud'
     args:
       - pubsub
@@ -46,6 +45,10 @@ steps:
       - publish
       - deploy-topic
       - --message={"image":"asia-south1-docker.pkg.dev/$PROJECT_ID/my-repo/my-app:$SHORT_SHA"}
+
+substitutions:
+  _REGION: asia-south1
+  _SERVICE_NAME: my-app
 
 options:
   logging: CLOUD_LOGGING_ONLY
