--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -2,8 +2,8 @@ FROM python:3.11-slim
 
 WORKDIR /app
 COPY app.py .
+RUN pip install Flask google-cloud-build
 
-RUN pip install Flask
 EXPOSE 8080
 
 CMD ["python", "app.py"]
